packages/core/test/baseman/invalid-usage/case-no-metadata-1/commands/default.ts
import {
  Command,
  Executable,
} from '../../../../..';

@Command()
export default class extends Executable {
  execute() { }
}
